Text Wrap Issue on Mobile
Removed min-width of 500px (BaseStyles)

--- a/brand-id(new)/theme-id/StyleSheet.scss
+++ b/brand-id(new)/theme-id/StyleSheet.scss
@@ -516,6 +516,14 @@ MOBILE
 	}
 }
 
+// Added to allow text to wrap on mobile for these questions
+@media only screen and (max-device-width: 480px) {
+	.Skin .Inner.CS,
+	.Skin .Inner.HBAR {
+		min-width: 0px;
+	}
+}
+
 /***********************************************************************************************************************
 TABLET
 ***********************************************************************************************************************/
